# Projet-C---Elections-Municipales

./: Makefile  Makefile.am  Makefile.in  Reclamation.txt  config.h  config.status  configure  configure.in  gestionliste.glade  gestionliste.gladep.bak  users.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Reclamation.txt  bureauv.c  bureauv.h  bv.txt  callbacks.c  callbacks.h  election.c  election.h  election.txt  gestionliste  interface.c  interface.c.bak  interface.h  interface.h.bak  login.c  login.h  login.txt  lse.c  lse.h  lse.txt  main.c  obs.txt  tree.c  tree.h  user.c  user.h  user.txt  users.txt
src/.deps/: bureauv.Po  callbacks.Po  election.Po  login.Po  lse.Po  tree.Po  user.Po
